--- a/crypto-trading-simulator-frontend/index.html
+++ b/crypto-trading-simulator-frontend/index.html
@@ -30,18 +30,7 @@
           />
           Crypto Trading Simulator
         </a>
-        <div id="user-nav">
-          <form class="d-flex" id="user-form">
-            <input
-              type="text"
-              class="form-control me-2"
-              name="username"
-              placeholder="Username"
-              id="username"
-            />
-            <button type="submit" class="btn btn-sm btn-primary">Login</button>
-          </form>
-        </div>
+        <div id="user-nav"></div>
       </div>
     </nav>
 
@@ -60,6 +49,7 @@
     <script src="javascripts/services/api.js"></script>
     <script src="javascripts/models/coin.js"></script>
     <script src="javascripts/models/user.js"></script>
+    <script src="javascripts/models/trade.js"></script>
     <script src="javascripts/index.js"></script>
   </body>
 </html>
