--- a/crypto-trading-simulator-frontend/index.html
+++ b/crypto-trading-simulator-frontend/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <link rel="icon" type="image/png" href="cts-logo.png" />
+    <link rel="icon" type="image/png" href="images/cts-logo.png" />
     <title>Crypto Trading Simulator</title>
 
     <!-- Bootstrap CSS -->
@@ -22,7 +22,7 @@
       <div class="container-fluid">
         <a class="navbar-brand" href="#">
           <img
-            src="cts-logo.png"
+            src="images/cts-logo.png"
             alt=""
             width="40"
             height="35"
